force-app/main/default/objects/Case/fields/Bill_To_Account_D_R__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_D_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the Bill To Account when there is a Distributor or Reseller Involved else will remain blank</description>
    <inlineHelpText>Refers to the Bill To Account when there is a Distributor or Reseller Involved else will remain blank</inlineHelpText>
    <label>Bill To Account (D/R)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>