force-app/main/default/objects/Case/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <label>Build</label>
    <length>40</length>
    <type>Text</type>
</CustomField>