force-app/main/default/objects/Case/fields/Case_Learning_for_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Case_Learning_for_Stakeholder__c</fullName>
    <label>Case Learning for Stakeholder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Improvement</fullName>
            </value>
            <value>
                <fullName>Service Limitation</fullName>
            </value>
            <value>
                <fullName>Product Improvement</fullName>
            </value>
            <value>
                <fullName>Product Limitation</fullName>
            </value>
            <value>
                <fullName>Partner Education</fullName>
            </value>
            <value>
                <fullName>Sales Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>