force-app/main/default/objects/Case/fields/Case_Status_Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Change_Timestamp__c</fullName>
    <description>Any time the Case Status is updated, this field will get timestamped</description>
    <label>Case Status Change Timestamp</label>
    <type>DateTime</type>
</CustomField>