force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Created to differentiate between internal and external cases, especially when sending out surveys.</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Facing</fullName>
            </value>
            <value>
                <fullName>Internal Collaboration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>