force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Reason why a request, inquiry, or problem was issued.</description>
    <inlineHelpText>Reason why a request, inquiry, or problem was issued.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inquiry_Problem_Request__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing - invoice errors or confusion</fullName>
            </value>
            <value>
                <fullName>Partner Service/Relationship - Lack of response or poor response to non product, service, or billing issues</fullName>
            </value>
            <value>
                <fullName>Partner Service/Relationship - Who to contact at ConnectWise (Sales, Support, other)</fullName>
            </value>
            <value>
                <fullName>Portal Enhancements</fullName>
            </value>
            <value>
                <fullName>Portal Navigation - How do I access information in the portal</fullName>
            </value>
            <value>
                <fullName>Product Errors - Software bugs, product performance, product down time</fullName>
            </value>
            <value>
                <fullName>Product Feature/Functionality Enhancements</fullName>
            </value>
            <value>
                <fullName>Product Functionality</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Service Delivery Complaint - Partner does not like existing scope/polices/procedures</fullName>
            </value>
            <value>
                <fullName>Service Delivery Complaint - SLO/ASA not met, ticket delays</fullName>
            </value>
            <value>
                <fullName>Service Delivery Complaint - Technician mistakes, quality, process incorrect or not followed</fullName>
            </value>
            <value>
                <fullName>Service Delivery Feature/Functionality Enhancements</fullName>
            </value>
            <value>
                <fullName>User / site / Account Setup / Configuration - How do I enter, delete or update information in the portal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Intent To Not Renew</fullName>
            </value>
            <value>
                <fullName>Contract Termination</fullName>
            </value>
            <value>
                <fullName>Contract Rewrite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>