force-app/main/default/objects/Case/fields/Closed_to_Partner_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Closed_to_Partner_Satisfaction__c</fullName>
    <label>Closed to Partner Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>