force-app/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Refers to where the problem reported could be found.</description>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>