force-app/main/default/objects/Case/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>