force-app/main/default/objects/Case/fields/csmrgp__Automerge_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent case this case is being automerged into by Case Merge Premium.</description>
    <label>Automerge Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Automerging Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>