force-app/main/default/objects/Case/fields/csmrgp__Merged_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Merged_Date_Time__c</fullName>
    <description>Date/Time that the case was merged.</description>
    <label>Merged Date/Time</label>
    <type>DateTime</type>
</CustomField>