force-app/main/default/objects/Case/fields/csmrgp__Subject_Conversation__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Subject_Conversation__c</fullName>
    <formula>TRIM(SUBSTITUTE(  SUBSTITUTE(   SUBSTITUTE(  SUBSTITUTE(  SUBSTITUTE( SUBSTITUTE(
Subject, &quot;Fwd:&quot;, &quot;&quot;), &quot;FW:&quot;, &quot;&quot;), &quot;Fw:&quot;, &quot;&quot;),&quot;RE:&quot;, &quot;&quot;), &quot;Re:&quot;, &quot;&quot;),&quot;[Email Loop Protection]&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Conversation</label>
    <type>Text</type>
</CustomField>