force-app/main/default/objects/Case/fields/CWS_Update_TSE_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CWS_Update_TSE_Timestamp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update TSE Timestamp after marking a checkbox on the checkbox</description>
    <inlineHelpText>Update TSE Timestamp after marking a checkbox on the checkbox</inlineHelpText>
    <label>Update TSE Timestamp</label>
    <type>Checkbox</type>
</CustomField>