force-app/main/default/objects/Case/fields/Dev_Case__c.field-meta.xml
<CustomField>
    <fullName>Dev_Case__c</fullName>
    <description>Refers to an Id for an escalated case.</description>
    <label>Dev Case</label>
    <length>40</length>
    <type>Text</type>
</CustomField>