force-app/main/default/objects/Case/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All escalated cases used for tracking.</description>
    <label>Development</label>
    <type>Checkbox</type>
</CustomField>