force-app/main/default/objects/Case/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>