force-app/main/default/objects/Case/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Field created to identify the Event related to a Case</description>
    <inlineHelpText>Field created to identify the Event related to a Case</inlineHelpText>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid19 - General Inquiry</fullName>
            </value>
            <value>
                <fullName>Covid19 - Billing / Contracts Adjustments</fullName>
            </value>
            <value>
                <fullName>Accounting Related Delay</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>CW Misdirect</fullName>
            </value>
            <value>
                <fullName>LogMeIn Pro</fullName>
            </value>
            <value>
                <fullName>Contract Re-Write</fullName>
            </value>
            <value>
                <fullName>Partner Communication</fullName>
            </value>
            <value>
                <fullName>Perch Billing Related</fullName>
            </value>
            <value>
                <fullName>AM Assistance Related</fullName>
            </value>
            <value>
                <fullName>PSM Assistance Related</fullName>
            </value>
            <value>
                <fullName>Sales Assistance Related</fullName>
            </value>
            <value>
                <fullName>Acronis Related</fullName>
            </value>
            <value>
                <fullName>Price Increase Related</fullName>
            </value>
            <value>
                <fullName>HD Price Increase</fullName>
            </value>
            <value>
                <fullName>Account Lockout Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>