force-app/main/default/objects/Case/fields/Exclude_From_Lock_Notices__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Lock_Notices__c</fullName>
    <description>Field to be used by the Partner Care Team to identify such Accounts to whom the Lock Notices should not be sent.</description>
    <inlineHelpText>Field to be used by the Partner Care Team to identify such Accounts to whom the Lock Notices should not be sent.</inlineHelpText>
    <label>Exclude From Lock Notices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>