force-app/main/default/objects/Case/fields/Explain__c.field-meta.xml
<CustomField>
    <fullName>Explain__c</fullName>
    <description>Explain the reason for &quot;Reason Partner is Unsatisfied&quot; selection.</description>
    <label>Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>