force-app/main/default/objects/Case/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>For Partner Care Case Follow Up Section.</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>