force-app/main/default/objects/Case/fields/Follow_Up_Date_Age__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_Age__c</fullName>
    <description>Refers to the Follow Up Date field and shows Age (when the last follow up was done on this case). RN-03520</description>
    <formula>Today() - Follow_Up_Date__c</formula>
    <inlineHelpText>Refers to the Follow Up Date field and shows Age (when the last follow up was done on this case). Positive value indicates follow up is done while Negative value indicates follow up to be done in future number of days.</inlineHelpText>
    <label>Follow Up Date Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>