force-app/main/default/objects/Case/fields/Inquiry_Problem_Request__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Problem_Request__c</fullName>
    <label>Inquiry/Problem/Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>