force-app/main/default/objects/Case/fields/Internal_Share__c.field-meta.xml
<CustomField>
    <fullName>Internal_Share__c</fullName>
    <description>Refers to the links that are shared internally - links to log/information share.</description>
    <label>Internal Share</label>
    <type>TextArea</type>
</CustomField>