force-app/main/default/objects/Case/fields/Issue_as_Presented__c.field-meta.xml
<CustomField>
    <fullName>Issue_as_Presented__c</fullName>
    <label>Issue as Presented</label>
    <length>255</length>
    <type>Text</type>
</CustomField>