force-app/main/default/objects/Case/fields/Jira_No__c.field-meta.xml
<CustomField>
    <fullName>Jira_No__c</fullName>
    <label>Jira No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>