force-app/main/default/objects/Case/fields/Kernel_Version__c.field-meta.xml
<CustomField>
    <fullName>Kernel_Version__c</fullName>
    <label>Kernel Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>