force-app/main/default/objects/Case/fields/Legacy_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_ID__c</fullName>
    <label>Legacy Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>