force-app/main/default/objects/Case/fields/Legacy_Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Date_Time_Closed__c</fullName>
    <label>Legacy Date/Time Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>