force-app/main/default/objects/Case/fields/Legacy_Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Date_Time_Opened__c</fullName>
    <label>Legacy Date/Time Opened</label>
    <length>255</length>
    <type>Text</type>
</CustomField>