force-app/main/default/objects/Case/fields/Legacy_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Type_Id__c</fullName>
    <label>Legacy Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>