force-app/main/default/objects/Case/fields/Legacy_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Id__c</fullName>
    <label>Legacy Source Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>