force-app/main/default/objects/Case/fields/Not_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved_Reason__c</fullName>
    <label>Not Approved Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NIF: Email Information</fullName>
            </value>
            <value>
                <fullName>Passwords: Missing/Incomplete Info</fullName>
            </value>
            <value>
                <fullName>Passwords: Desktops Offline</fullName>
            </value>
            <value>
                <fullName>Passwords: Passwords Incorrect</fullName>
            </value>
            <value>
                <fullName>Notification Rule</fullName>
            </value>
            <value>
                <fullName>NIF: Other</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Security Requests</fullName>
            </value>
            <value>
                <fullName>Basic Information</fullName>
            </value>
            <value>
                <fullName>Agents Not Installed</fullName>
            </value>
            <value>
                <fullName>Continuum U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>