force-app/main/default/objects/Case/fields/Number_of_Agents_at_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Agents_at_Go_Live__c</fullName>
    <label>Number of Agents at Go-Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>