force-app/main/default/objects/Case/fields/Number_of_Agents_Expected_in_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Agents_Expected_in_30_Days__c</fullName>
    <label>Number of Agents Expected in 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>