force-app/main/default/objects/Case/fields/OS_and_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_and_Version__c</fullName>
    <label>OS and Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>