force-app/main/default/objects/Case/fields/Partner_Facing_Summary__c.field-meta.xml
<CustomField>
    <fullName>Partner_Facing_Summary__c</fullName>
    <description>Summary of the issue and our resolution.</description>
    <inlineHelpText>Summary of the issue and our resolution.</inlineHelpText>
    <label>Partner Facing Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>