force-app/main/default/objects/Case/fields/Product_CWS__c.field-meta.xml
<CustomField>
    <fullName>Product_CWS__c</fullName>
    <description>For Continuum Cases</description>
    <label>Product (CWS)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin - Contracts</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
                <label>Admin - Events</label>
            </value>
            <value>
                <fullName>Admin - No Product</fullName>
            </value>
            <value>
                <fullName>Assist Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>Assist Help Desk</fullName>
            </value>
            <value>
                <fullName>Assist Tech Advantage</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Azure SQL database backup</fullName>
            </value>
            <value>
                <fullName>BDR - Backup</fullName>
                <label>BDR  Backup</label>
            </value>
            <value>
                <fullName>Continuity247</fullName>
                <label>BDR  Continuity</label>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>CDP 2.0 for Data Centers</fullName>
            </value>
            <value>
                <fullName>CDP 2.0 Linux</fullName>
            </value>
            <value>
                <fullName>CDP 2.0 Windows</fullName>
            </value>
            <value>
                <fullName>CDP 3.0 Enterprise Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP 3 Advanced Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP 3 Advanced Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP 3 Enterprise Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP 3 Enterprise Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP 3 Standard Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP 3 Standard Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Advanced Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP Advanced Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Data Center Console</fullName>
            </value>
            <value>
                <fullName>CDP Enterprise Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP Enterprise Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Server 2.0 Linux</fullName>
            </value>
            <value>
                <fullName>CDP Server 2.0 Windows</fullName>
            </value>
            <value>
                <fullName>CDP Standard Edition Linux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>