force-app/main/default/objects/Case/fields/Product_R1S__c.field-meta.xml
<CustomField>
    <fullName>Product_R1S__c</fullName>
    <description>Used by R1Soft</description>
    <label>Product (R1S)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CDP Enterprise Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Enterprise Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP Data Center Console</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>ARCA</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>SmartStyle</fullName>
            </value>
            <value>
                <fullName>Remote Monitoring and Management</fullName>
            </value>
            <value>
                <fullName>Mobile Device Management</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
            <value>
                <fullName>BDR Revive</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Tech Advantage</fullName>
            </value>
            <value>
                <fullName>Network Detective</fullName>
            </value>
            <value>
                <fullName>Anti-Virus</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>Sync247</fullName>
            </value>
            <value>
                <fullName>CDP Standard Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Standard Edition Linux</fullName>
            </value>
            <value>
                <fullName>CDP Advanced Edition Windows</fullName>
            </value>
            <value>
                <fullName>CDP Advanced Edition Linux</fullName>
            </value>
            <value>
                <fullName>SQL Diagnostic Manager</fullName>
            </value>
            <value>
                <fullName>SQLsafe</fullName>
            </value>
            <value>
                <fullName>SQL compliance manager</fullName>
            </value>
            <value>
                <fullName>SQLdefrag</fullName>
            </value>
            <value>
                <fullName>SQL mobile manager</fullName>
            </value>
            <value>
                <fullName>SQLsecure</fullName>
            </value>
            <value>
                <fullName>SQL admin toolset</fullName>
            </value>
            <value>
                <fullName>PowerShell Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>