force-app/main/default/objects/Case/fields/Product_R1S_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_R1S_Version__c</fullName>
    <label>Product (R1S) Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_R1S__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.0.205</fullName>
            </value>
            <value>
                <fullName>1.0.210</fullName>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>1.1.0</fullName>
            </value>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.3</fullName>
            </value>
            <value>
                <fullName>1.4</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.6</fullName>
            </value>
            <value>
                <fullName>1.7</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.0.1</fullName>
            </value>
            <value>
                <fullName>2.1</fullName>
            </value>
            <value>
                <fullName>2.12</fullName>
            </value>
            <value>
                <fullName>2.14</fullName>
            </value>
            <value>
                <fullName>2.16</fullName>
            </value>
            <value>
                <fullName>2.20</fullName>
            </value>
            <value>
                <fullName>2.28</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.6</fullName>
            </value>
            <value>
                <fullName>2.7</fullName>
            </value>
            <value>
                <fullName>2.8</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>3.08</fullName>
            </value>
            <value>
                <fullName>3.1</fullName>
            </value>
            <value>
                <fullName>3.8</fullName>
            </value>
            <value>
                <fullName>3.10</fullName>
            </value>
            <value>
                <fullName>3.12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>