force-app/main/default/objects/Case/fields/R1_Silent_Close__c.field-meta.xml
<CustomField>
    <fullName>R1_Silent_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked, a case survey email will not be sent on close</description>
    <label>R1 Silent Close</label>
    <type>Checkbox</type>
</CustomField>