force-app/main/default/objects/Case/fields/R1_Survey_Comments__c.field-meta.xml
<CustomField>
    <fullName>R1_Survey_Comments__c</fullName>
    <description>Contact&apos;s answer to the question: Comments</description>
    <label>R1 Survey Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>