force-app/main/default/objects/Case/fields/R1_Survey_Communication__c.field-meta.xml
<CustomField>
    <fullName>R1_Survey_Communication__c</fullName>
    <description>Contact&apos;s answer to the question: How satisfied are you with the technician&apos;s communication (polite/professional/audible)?</description>
    <inlineHelpText>How satisfied are you with the technician&apos;s communication (polite/professional/audible)?</inlineHelpText>
    <label>R1 Survey Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5. Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>4. Satisfied</fullName>
            </value>
            <value>
                <fullName>3. Neither Satisfied nor Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. Dissatisfied</fullName>
            </value>
            <value>
                <fullName>1. Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>