force-app/main/default/objects/Case/fields/R1_Survey_Ease_of_Handling__c.field-meta.xml
<CustomField>
    <fullName>R1_Survey_Ease_of_Handling__c</fullName>
    <description>Contact&apos;s answer to the question: The R1Soft team made it easy for me when handling my recent issue/ticket.</description>
    <inlineHelpText>The R1Soft team made it easy for me when handling my recent issue/ticket.</inlineHelpText>
    <label>R1 Survey Ease of Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5. Strongly Agree</fullName>
            </value>
            <value>
                <fullName>4. Agree</fullName>
            </value>
            <value>
                <fullName>3. Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>2. Disagree</fullName>
            </value>
            <value>
                <fullName>1. Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>