force-app/main/default/objects/Case/fields/R1_Survey_Overall_Service__c.field-meta.xml
<CustomField>
    <fullName>R1_Survey_Overall_Service__c</fullName>
    <description>Contact&apos;s answer to the question: How satisfied are you with R1Soft&apos;s overall service?</description>
    <inlineHelpText>How was the overall service?</inlineHelpText>
    <label>R1 Survey Overall Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5. Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>4. Satisfied</fullName>
            </value>
            <value>
                <fullName>3. Neither Satisfied nor Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. Dissatisfied</fullName>
            </value>
            <value>
                <fullName>1. Extremely Dissatisfied</fullName>
            </value>
            <value>
                <fullName>--Select--</fullName>
            </value>
            <value>
                <fullName>1. Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>4. Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>5. Very Satisfied</fullName>
            </value>
            <value>
                <fullName>5. Strongly Agree</fullName>
            </value>
            <value>
                <fullName>4. Somewhat Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>